Configutre depolyment to Github Pages

--- a/Word-Add-in-AIGC/package.json
+++ b/Word-Add-in-AIGC/package.json
@@ -12,6 +12,8 @@
     "dev_server_port": 3000
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
