--- a/Word-Add-in-AIGC/package.json
+++ b/Word-Add-in-AIGC/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist -b gh-pages -r https://github.com/OfficeDev/Word-Scenario-based-Add-in-Samples.git -e Word-Add-in-AIGC",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
