--- a/Word-Add-in-AIGC/package.json
+++ b/Word-Add-in-AIGC/package.json
@@ -20,11 +20,11 @@
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
-    "start": "office-addin-debugging start manifest.xml",
-    "start:desktop": "office-addin-debugging start manifest.xml desktop",
-    "start:web": "office-addin-debugging start manifest.xml web",
-    "stop": "office-addin-debugging stop manifest.xml",
-    "validate": "office-addin-manifest validate manifest.xml",
+    "start": "office-addin-debugging start manifest-localhost.xml",
+    "start:desktop": "office-addin-debugging start manifest-localhost.xml desktop",
+    "start:web": "office-addin-debugging start manifest-localhost.xml web",
+    "stop": "office-addin-debugging stop manifest-localhost.xml",
+    "validate": "office-addin-manifest validate manifest-localhost.xml",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
